# rustywinx

./: .env.example  .gitignore  Cargo.toml  LICENSE
src/: bot.rs  commands.rs  config.rs  dispatcher.rs  handlers.rs  lib.rs  main.rs  modules.rs  types.rs
src/commands/: start.rs
src/handlers/: message.rs
