[package]
name = "rustywinx"
version = "0.1.0"
authors = ["gabrielmaialva33 <gabrielmaialva33@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.12.2"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"

[dev-dependencies]
rustfmt = "0.10.0"