[package]
name = "rustywinx"
version = "0.1.0"
authors = ["gabrielmaialva33 <gabrielmaialva33@gmail.com>"]
edition = "2021"

[lib]
name = "rusty_core"
path = "src/lib.rs"

[[bin]]
name = "rustywinx"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
async-openai = "0.13.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5.0"
env_logger = "0.10"
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1.51"
os_info = "3.7.0"
sys-info = "0.9.1"

[dev-dependencies]
rustfmt = "0.10.0"
